fixed spin bg image overlap issue

--- a/client/src/pages/Spin/Spin.scss
+++ b/client/src/pages/Spin/Spin.scss
@@ -116,6 +116,7 @@
     justify-content: center;
     align-items: center;
     background-color: #04111E;
+    z-index: 1111111111;
   }
 
   .spin-bg-image {
